# ctranslate2-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
examples/generator/: Cargo.toml  README.md
examples/generator/src/: main.rs
include/: ctranslate2.h
src/: lib.rs
