[package]
name = "ctranslate2-rs"
description = "Rust bindings for CTranslate2"
version = "3.16.0-1"
edition = "2021"
license = "MIT"
authors = ["Jeffrey Quesnelle <jq@jeffq.com>"]
keywords = ["ctranslate2"]
readme = "README.md"
repository = "https://github.com/jquesnelle/ctranslate2-rs/"

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
cuda-config = "0.1.0"

[features]
mkl = []
dnnl = []
accelerate = []
openblas = []
ruy = []
cuda = []
cudnn = []
